k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xploitverse-backend
  namespace: xploitverse
  labels:
    app.kubernetes.io/name: xploitverse-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: xploitverse
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: xploitverse-backend
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: xploitverse-client
  namespace: xploitverse
  labels:
    app.kubernetes.io/name: xploitverse-client
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: xploitverse
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: xploitverse-client
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
